force-app/main/default/objects/Product_Soojung__c/Product_Soojung__c.object-meta.xml
<CustomObject>
    <label>Product_Soojung</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product_Soojung</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>