force-app/main/default/objects/Product_Soojung__c/fields/OrderProduct_Soojung__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct_Soojung__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OrderProduct</label>
    <referenceTo>OrderProduct_Soojung__c</referenceTo>
    <relationshipLabel>Product_Soojung</relationshipLabel>
    <relationshipName>Product_Soojung</relationshipName>
    <type>Lookup</type>
</CustomField>