force-app/main/default/objects/Product_Soojung__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bookcases</fullName>
            </value>
            <value>
                <fullName>Chairs</fullName>
            </value>
            <value>
                <fullName>Furnishings</fullName>
            </value>
            <value>
                <fullName>Tables</fullName>
            </value>
            <value>
                <fullName>Appliances</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Binders</fullName>
            </value>
            <value>
                <fullName>Envelopes</fullName>
            </value>
            <value>
                <fullName>Fasteners</fullName>
            </value>
            <value>
                <fullName>Labels</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Supplies</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Copiers</fullName>
            </value>
            <value>
                <fullName>Machines</fullName>
            </value>
            <value>
                <fullName>Phones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>